# C-Game-engine

./: .gitignore  CMakeLists.txt  README.md
assets/: collision.py  map.map  parser.cpp  testmap2.map
assets/data/: hitboxes.txt
assets/images/: monk.png.pyxel
assets/mapdata/: Arena.map  MapList.json  extended.map  map.map  testmap.map
assets/maps/: map_Arena.json  map_Extended.json  map_map.json  map_tESTmAP.json
assets/relationships/: tilesets.json
include/: AssetManager.h  Collision.h  Components.h  Game.h  GameObject.h  GroupManager.h  HitboxManager.h  LevelManager.h  Map.h  SceneManager.h  Systems.h  TextureManager.h  Vector2D.h
include/Components/: Animation.h  Collider.h  Damage.h  Gravity.h  Hitpoint.h  Projectile.h  Sprite.h  Transform.h
include/Core/: ComponentArray.h  ComponentManager.h  Core.h  System.h  SystemManager.h
include/ECS/: Collider.h  ColliderComponent.h  Components.h  DamageComponent.h  ECS.h  GravityComponent.h  Hitpoint.h  HitpointComponent.h  Keyboard.h  KeyboardController.h  Player.h  Projectile.h  ProjectileComponent.h  Sprite.h  SpriteComponent.h  Tile.h  TileComponent.h  Transform.h  TransformComponent.h
include/Managers/: GroupManager.h  HitboxManager.h  LevelManager.h  SceneManager.h  TextureManager.h
include/Systems/: ColliderSystem.h  DamageSystem.h  GlobalSystem.h  HitpointSystem.h  KeyboardControlSystem.h  PlayerSystem.h  RenderSystem.h  TransformSystem.h
src/: AssetManager.cpp  Collision.cpp  Components.h  ECS.cpp  Game.cpp  Game.h  GameObject.cpp  HitboxManager.cpp  LevelManager.cpp  Managers.h  Map.cpp  SceneManager.cpp  Systems.h  TextureManager.cpp  Transform.cpp  Vector2D.cpp  main.cpp
src/Components/: AutoMovement.cpp  AutoMovement.h  Collider.cpp  Collider.h  Damage.cpp  Damage.h  Gravity.cpp  Gravity.h  Hitpoint.cpp  Hitpoint.h  Keyboard.cpp  Keyboard.h  Player.cpp  Player.h  Projectile.cpp  Sprite.cpp  (+4 more)
(+56 files in other folders)
